# diskimage-builder

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .yamllint  MANIFEST.in  README.md  README.rst  baremetal-mkinitrd.sh  bindep.txt  lower-constraints.txt  phy-mkinitrd.sh  pylint.cfg  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.zuul.d/: jobs.yaml  project.yaml
contrib/: setup-gate-mirrors.sh
diskimage_builder/: __init__.py  dib_run_parts.py  disk_image_create.py  diskimage_builder.py  element_dependencies.py  elements.py  logging_config.py  paths.py  test_elementdeps.py  test_elements.py  utils.py  version.py
diskimage_builder/block_device/: __init__.py  blockdevice.py  blockdevicesetupexception.py  cmd.py  config.py  exception.py  levelbase.py  plugin.py  plugin_base.py  tree_config.py  utils.py
diskimage_builder/graph/: digraph.py
diskimage_builder/lib/: common-defaults  common-functions  dib-block-device.py  dib-run-parts  die  disk-image-create  element-info.py  img-defaults  img-functions  outfilter.py  ramdisk-functions
diskimage_builder/locale/: diskimage_builder.pot
diskimage_builder/tests/: base.py  test_diskimage_builder.py  test_elementdeps.py  test_elements.py  test_loggingconfig.py  test_no_dup_filenames.py
doc/: requirements.txt
doc/lib/: element_deps.py
doc/source/: caches.rst  ci.md  components.rst  conf.py  copyright.rst  design.rst  elements  elements.rst  index.rst  installation.rst
docs/: ci.md  docker.md
elements/apt-conf/: README.md  README.rst
elements/apt-preferences/: README.md  README.rst
elements/apt-sources/: README.md  README.rst
elements/architecture-emulation-binaries/: README.md  README.rst
elements/baremetal/: README.md  README.rst
elements/base/: README.md  README.rst  dib-first-boot  dib-init-system  element-deps  package-installs.yaml  pkg-map
elements/bootloader/: README.rst  pkg-map
elements/cache-url/: README.md  README.rst
elements/centos/: element-deps  package-installs.yaml
elements/centos-minimal/: README.md  README.rst  element-deps  element-provides  pkg-map
elements/centos7/: README.md  README.rst  element-deps
elements/cinder/: README.md  element-deps  migration  post-configure  pre-configure
elements/cleanup-kernel-initrd/: README.md  README.rst
elements/cloud-init/: README.rst  pkg-map
elements/cloud-init-datasources/: README.md  README.rst
elements/cloud-init-disable-resizefs/: README.rst
elements/cloud-init-nocloud/: README.md  element-deps
elements/config-applier/: README.md  source-repository-config-applier
elements/debian/: README.md  README.rst  element-deps  package-installs.yaml
elements/debian-minimal/: README.rst  element-deps  pkg-map
elements/debian-systemd/: README.md
elements/debian-upstart/: README.md  README.rst
elements/debootstrap/: README.rst  pkg-map
elements/deploy/: README.md  README.rst  element-deps  init
elements/deploy-ironic/: README.md  README.rst  package-installs.yaml
elements/deploy-kexec/: README.md  README.rst
elements/deploy-targetcli/: README.md  README.rst
elements/deploy-tgtadm/: README.md  README.rst
elements/devstack/: README.md  element-deps
elements/devuser/: README.rst
elements/dhcp-all-interfaces/: README.md  README.rst  element-deps  package-installs.yaml  pkg-map
elements/dib-init-system/: README.rst  dib-init-system
elements/dib-python/: README.rst
elements/dkms/: README.md  README.rst  package-installs.yaml
elements/dpkg/: README.md  README.rst  element-deps
elements/dracut-network/: README.md  element-deps
elements/dracut-ramdisk/: README.md  README.rst  element-deps
elements/dynamic-login/: README.rst  element-deps
elements/element-manifest/: README.md  README.rst
elements/enable-serial-console/: README.rst
elements/epel/: README.md  README.rst
elements/fedora/: README.md  README.rst  element-deps  package-installs.yaml
elements/fedora-minimal/: element-deps  element-provides
elements/gentoo/: README.rst  element-deps  package-installs.yaml
elements/glance/: README.md  element-deps
elements/glance-api/: README.md
elements/growroot/: README.rst  element-deps  pkg-map
elements/grub2/: pkg-map
elements/heat-cfntools/: README.md  element-deps
elements/heat-jeos/: README.md
elements/hpdsa/: README.rst
elements/hwburnin/: README.md  binary-deps
elements/hwdiscovery/: README.md  README.rst  binary-deps  init
elements/icinga-core/: README.md
elements/icinga-web/: README.md
elements/ilo/: README.md  README.rst
elements/install-bin/: README.rst
elements/install-static/: README.md  README.rst
elements/ironic-agent/: README.md  README.rst  element-deps  package-installs.yaml  pkg-map  source-repository-ironic-agent  svc-map
elements/ironic-discoverd-ramdisk/: README.md  README.rst  package-installs.yaml
elements/iso/: README.md  README.rst  package-installs.yaml  pkg-map
elements/jenkins/: README.md
elements/keystone/: README.md  element-deps  post-configure
elements/keystone-config/: element-deps
elements/local-config/: README.md  README.rst
elements/manifests/: README.md  README.rst
elements/mellanox/: README.md  README.rst  pkg-map
elements/modprobe-blacklist/: README.md
elements/mysql/: README.md
elements/mysql-migration/: README.md  element-deps
elements/nova/: README.md  element-deps
elements/nova-api/: README.md
elements/oat-client/: package-installs.yaml
elements/openssh-server/: package-installs.yaml
elements/openstack-all/: README.md  element-deps
elements/openstack-db/: README.md  (+1 more)
lib/: common-defaults  common-functions  die  img-defaults  img-functions  ramdisk-defaults  ramdisk-functions
scripts/: init  init-end
sudoers.d/: img-build-sudoers
tests/: README.rst  dib_functions_test.sh  image_output_formats.bash  install_test_deps.sh  run_dib_library_tests.sh  run_functests.sh  run_output_format_test.sh  test_elements.bash  test_functions.bash
tools/: functional-test-check.sh  test-requires
udev/: firmware.sh
(+1647 files in other folders)
