[metadata]
name = diskimage-builder
summary = Golden Disk Image builder.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
license: Apache License (2.0)
home-page = http://docs.openstack.org/developer/diskimage-builder/
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Environment :: Console

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[files]
packages =
    diskimage_builder

# ramdisk-image-create is a symlink which becomes a
# real file on install; see lp bug #1212482
scripts =
    bin/dib-lint
data_files =
    share/diskimage-builder/scripts = scripts/*

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = diskimage_builder/locale/diskimage_builder.pot

[update_catalog]
domain = diskimage_builder
output_dir = diskimage_builder/locale
input_file = diskimage_builder/locale/diskimage_builder.pot

[compile_catalog]
directory = diskimage_builder/locale
domain = diskimage_builder

[wheel]
universal = 1

[entry_points]
console_scripts =
    element-info = diskimage_builder.element_dependencies:main
    dib-block-device = diskimage_builder.block_device:main
    disk-image-create = diskimage_builder.disk_image_create:main
    ramdisk-image-create = diskimage_builder.disk_image_create:main
    dib-run-parts = diskimage_builder.dib_run_parts:main
