[metadata]
name = diskimage-builder
summary = Golden Disk Image builder.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
license: Apache License (2.0)
home-page = https://docs.openstack.org/diskimage-builder/latest/
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Environment :: Console

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[pbr]
autodoc_index_modules = 1
autodoc_exclude_modules =
     setup.py
     diskimage_builder.tests.*
     diskimage_builder.block_device.tests.*
     # elements are a weird mix of scripts & python
     diskimage_builder.elements.*
     # this is non-pythony stuff
     diskimage_builder.lib.*

[files]
packages =
    diskimage_builder

# ramdisk-image-create is a symlink which becomes a
# real file on install; see lp bug #1212482
scripts =
    bin/dib-lint
data_files =
    share/diskimage-builder/scripts = scripts/*

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = diskimage_builder/locale/diskimage_builder.pot

[update_catalog]
domain = diskimage_builder
output_dir = diskimage_builder/locale
input_file = diskimage_builder/locale/diskimage_builder.pot

[compile_catalog]
directory = diskimage_builder/locale
domain = diskimage_builder

[wheel]
universal = 1

[entry_points]
console_scripts =
    element-info = diskimage_builder.element_dependencies:main
    dib-block-device = diskimage_builder.block_device.cmd:main
    disk-image-create = diskimage_builder.disk_image_create:main
    ramdisk-image-create = diskimage_builder.disk_image_create:main

diskimage_builder.block_device.plugin =
    local_loop = diskimage_builder.block_device.level0.localloop:LocalLoop
    partitioning = diskimage_builder.block_device.level1.partitioning:Partitioning
    lvm = diskimage_builder.block_device.level1.lvm:LVMPlugin
    mkfs = diskimage_builder.block_device.level2.mkfs:Mkfs
    mount = diskimage_builder.block_device.level3.mount:Mount
    fstab = diskimage_builder.block_device.level4.fstab:Fstab

# unit test extensions
diskimage_builder.block_device.plugin_test =
    test_a = diskimage_builder.block_device.tests.plugin.test_a:TestA
    test_b = diskimage_builder.block_device.tests.plugin.test_b:TestB
