[metadata]
name = diskimage-builder
summary = Golden Disk Image builder.
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
license: Apache License (2.0)
home_page = https://docs.openstack.org/diskimage-builder/latest/
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Environment :: Console
python_requires = >=3.6

[files]
packages =
    diskimage_builder

# ramdisk-image-create is a symlink which becomes a
# real file on install; see lp bug #1212482
scripts =
    bin/dib-lint
data_files =
    share/diskimage-builder/scripts = scripts/*

[entry_points]
console_scripts =
    disk-image-create = diskimage_builder.disk_image_create:main
    ramdisk-image-create = diskimage_builder.disk_image_create:main

diskimage_builder.block_device.plugin =
    local_loop = diskimage_builder.block_device.level0.localloop:LocalLoop
    partitioning = diskimage_builder.block_device.level1.partitioning:Partitioning
    lvm = diskimage_builder.block_device.level1.lvm:LVMPlugin
    mkfs = diskimage_builder.block_device.level2.mkfs:Mkfs
    mount = diskimage_builder.block_device.level3.mount:Mount
    fstab = diskimage_builder.block_device.level4.fstab:Fstab

# unit test extensions
diskimage_builder.block_device.plugin_test =
    test_a = diskimage_builder.block_device.tests.plugin.test_a:TestA
    test_b = diskimage_builder.block_device.tests.plugin.test_b:TestB
